# tictactoe

./: .gitignore  CMakeLists.txt
include/: Board.hpp  Coordinates.hpp  Field.hpp
src/: Board.cpp
uts/: BoardTest.cpp  FieldTest.cpp
